# DiscordBirthdayBot

./: database.db  main.py  pyproject.toml
