[tool.poetry]
name = "repl_python3_beta_DiscordBirthdayBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.18.0"
pytz = "^2021.1"
APScheduler = "^3.7.0"
schedule = "^1.1.0"
dhooks = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
